Correct spacing in information section
Fixed flex shorthand in order to fix the spacing issues between each column.

--- a/style.css
+++ b/style.css
@@ -107,11 +107,14 @@ color:#1f2937;
 .box-container {
 display: flex;
 flex-direction: column;
+width:200px;
+margin: 0px auto;
+
 }
 
 
 .box {
-flex: 1;
+flex: auto;
 border:2px solid #3882f6;
 border-radius: 5px;
 background-color: #e9e9e9;
@@ -119,4 +122,9 @@ width:200px;
 height: 200px;
 padding:50px;
 text-align: center;
+}
+
+.box-container p {
+    flex:auto;
+    padding:0px 5px;
 }
